Fixing type error with meta description, making footer copy contrast WCAG compliant, adding webp assets

--- a/_scss/_footer.scss
+++ b/_scss/_footer.scss
@@ -89,10 +89,10 @@
   }
 }
 .legal {
-  font-size: 0.6em;
+  font-size: 0.8em;
 
   &, a, a:visited {
-    color: var(--brandGray);
+    color: var(--brandGrayLight);
   }
 }
 
